stopped divs from bouncing. got rid of scrollbars. fixed up conditional in index.js to prevent empty input in form

--- a/public/results.css
+++ b/public/results.css
@@ -2,10 +2,11 @@
 
 html, body {
   font-family: 'Luckiest Guy', cursive;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 .results {
@@ -48,13 +49,13 @@ html, body {
 
 .art {
   height: 33%;
-  width: 100%;
+  width: 100vw;
   background-color: #33a43e;
 }
 
 .author {
   height: 7%;
-  width: 100%;
+  width: 100vw;
   background-color: #33a43e;
   color: #f5f5dc;
   text-align: center;
